added academic council

--- a/assets/ignoreit/regent.html
+++ b/assets/ignoreit/regent.html
@@ -1,56 +1,61 @@
-<style type="text/css">.infoclass{ padding-left:8px; padding-top:3px; padding-bottom: 3px; background-color:white;-webkit-box-shadow: inset 0px 0px 3px 0px rgba(49, 50, 50, 0.67);
--moz-box-shadow:    inset 0px 0px 3px 0px rgba(49, 50, 50, 0.67);
-box-shadow:         inset 0px 0px 3px 0px rgba(49, 50, 50, 0.67);}
-body{background-color:#f5f5f5}
+<style type="text/css">.infoclass{ font-size:14px;padding:8px; margin-bottom:3px; border-radius: 3px;  background-color:white;-webkit-box-shadow: inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
+-moz-box-shadow:    inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
+box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
+body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
+p{font-size:15px}
+.headertitle{width:100%; font-size: 16px; background:#29b6f6; color:#FFFFFF; border-radius: 3px;}
 </style>
-<p style="text-align: center;"><span style="font-size:16px;"><strong>Chairman</strong></span></p>
+<div class="headertitle">Chairman</div>
+<p style="text-align: center;"><strong>Chairman</strong></p>
 
-<div class="infoclass">Prof. Dr. A. K. M. Sayedul Haque Chowdhury<br />
+<div class="infoclass"><strong>Prof. Dr. A. K. M. Sayedul Haque Chowdhury</strong><br />
 Vice Chancellor<br />
 Telephone: +880-321-62833, 62733, 62655.<br />
 Mobile: +880-1730-042888</div>
 
-<p style="text-align: center;"><strong><span style="font-size:16px;">Members</span></strong></p>
+<div class="headertitle">
+<p style="text-align: center;"><strong>Members</strong></p>
+</div>
 
 <p style="text-align: center;">Two parliamentary members nominated by parliament leader, one of them should be from greater Noakhali region:</p>
 
-<div class="infoclass">Mr. Mohammed Ekramul Karim Chowdhury<br />
+<div class="infoclass"><strong>Mr. Mohammed Ekramul Karim Chowdhury</strong><br />
 MP<br />
 Noakhali-4, Noakhali.<br />
 Mobile: +880-1713-216140</div>
 
-<div class="infoclass">Mr. A.B.M Fazle Karim Chowdhury<br />
+<div class="infoclass"><strong>Mr. A.B.M Fazle Karim Chowdhury</strong><br />
 MP<br />
 Chittagong-6, Chittagong<br />
 Mobile: +880-1726-000480</div>
 
 <p style="text-align: center;">&nbsp;Two members of joint-secretary rank nominated by the government.</p>
 
-<div class="infoclass">Additional Secretary (Development)<br />
+<div class="infoclass"><strong>Additional Secretary (Development)</strong><br />
 Ministry of Education, The People&rsquo;s Republic of Bangladesh Government<br />
 Bangladesh Secretariat, Dhaka-1000.<br />
 Telephone: +880-2-9556789</div>
 
-<div class="infoclass">Additional Secretary (University)<br />
+<div class="infoclass"><strong>Additional Secretary (University)</strong><br />
 Ministry of Education, The People&rsquo;s Republic of Bangladesh Government<br />
 Bangladesh Secretariat, Dhaka-1000.<br />
 Telephone: +880-2-9512285</div>
 
 <p style="text-align: center;">Three members from the research institute of Science and Technology Affairs nominated by the government.</p>
 
-<div class="infoclass">Prof. Dr. A. I. Mustafa<br />
+<div class="infoclass"><strong>Prof. Dr. A. I. Mustafa</strong><br />
 Chairman, BCSIR.<br />
 Dr. Qudrat-E-Khuda road,<br />
 Dhanmondi, Dhaka-1205.<br />
 Telephone: +880-2-8613511<br />
 Mobile: +880-1819-240980</div>
 
-<div class="infoclass">Dr. Md. Rafiqul Islam Mondal<br />
+<div class="infoclass"><strong>Dr. Md. Rafiqul Islam Mondal</strong><br />
 Director-General<br />
 Bangladesh Agriculture Research Institute (BARI)<br />
 Joydebpur, Gazipur.</div>
 
-<div class="infoclass">Prof. Dr. A. S. M. Maksud Kamal<br />
+<div class="infoclass"><strong>Prof. Dr. A. S. M. Maksud Kamal</strong><br />
 Chairman<br />
 Department of Disaster Science and Management<br />
 Dhaka University, Dhaka-1000.<br />
@@ -58,20 +63,20 @@ Phone: 01937894557</div>
 
 <p style="text-align: center;">Three prominent educationist nominated by the Chancellor.</p>
 
-<div class="infoclass">Prof. Dr. Md. Abdul Mannan Akondo<br />
+<div class="infoclass"><strong>Prof. Dr. Md. Abdul Mannan Akondo</strong><br />
 Department of Plant Pathology<br />
 Bangabandhu Sheikh Mujibur Rahman Agricultural University.<br />
 Gazipur.<br />
 Phone: 9205336<br />
 Mobile: 01755593159</div>
 
-<div class="infoclass">Prof. Dr. Shariff Enamul Kabir<br />
+<div class="infoclass"><strong>Prof. Dr. Shariff Enamul Kabir</strong><br />
 Department of Chemistry<br />
 Jahangirnagar University<br />
 Savar, Dhaka.<br />
 Phone: 01713464698</div>
 
-<div class="infoclass">Prof. Dr. Amir Hossain Khan<br />
+<div class="infoclass"><strong>Prof. Dr. Amir Hossain Khan</strong><br />
 Department of Physics<br />
 Jahangirnagar University<br />
 Savar, Dhaka.<br />
@@ -79,7 +84,7 @@ Phone: 01911021808</div>
 
 <p style="text-align: center;">Chairman, Intermediate and Secondary Education Boards Bangladesh</p>
 
-<div class="infoclass">Chairman<br />
+<div class="infoclass"><strong>Chairman</strong><br />
 Intermediate and Secondary Education Board.<br />
 Chittagong.<br />
 Phone: 031-670125<br />
@@ -87,24 +92,24 @@ Phone: 01711723224</div>
 
 <p style="text-align: center;">Three representatives from the teachers of this university nominated by the academic council.</p>
 
-<div class="infoclass">Prof. Dr. Md. Abul Hossain<br />
+<div class="infoclass"><strong>Prof. Dr. Md. Abul Hossain</strong><br />
 Dean, Faculty of Science<br />
 Phone: 62823<br />
 Mobile: 01733910237</div>
 
-<div class="infoclass">Dr. Md. Jahangir Sarkar<br />
+<div class="infoclass"><strong>Dr. Md. Jahangir Sarkar</strong><br />
 Associate Professor<br />
 Department of Fisheries and Marine Science<br />
 Mobile: 01733910237</div>
 
-<div class="infoclass">Dr. Md. Selim Hossain<br />
+<div class="infoclass"><strong>Dr. Md. Selim Hossain</strong><br />
 Associate Professor<br />
 Department of Pharmacy<br />
 Mobile: 01711200410</div>
 
 <p style="text-align: center;">Members from industries and business personality nominated by the government.</p>
 
-<div class="infoclass">Mr Md. Mamunur Rashid Kiron<br />
+<div class="infoclass"><strong>Mr Md. Mamunur Rashid Kiron</strong><br />
 Director-General<br />
 Globe Pharmaceuticals Group of Companies Limited.<br />
 Chowmuhoni, Noakhali. &nbsp;<br />
@@ -113,13 +118,13 @@ Mobile:&nbsp; 01817211113</div>
 
 <p style="text-align: center;">Two members of the rank of principal and professor from different institutes of greater Noakhali region nominated by the academic council.</p>
 
-<div class="infoclass">Principal<br />
+<div class="infoclass"><strong>Principal</strong><br />
 Noakhali Govt. College.<br />
 Noakhali<br />
 Phone: 61594<br />
 Mobile: 01718862934</div>
 
-<div class="infoclass">Principal<br />
+<div class="infoclass"><strong>Principal</strong><br />
 Noakhali Govt Women College.<br />
 Noakhali.<br />
 Phone: 61198<br />
