added academic council

--- a/assets/ignoreit/academic_council.html
+++ b/assets/ignoreit/academic_council.html
@@ -1,118 +1,125 @@
+
 <style type="text/css">.infoclass{ font-size:14px;padding:8px; margin-bottom:3px; border-radius: 3px;  background-color:white;-webkit-box-shadow: inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
 -moz-box-shadow:    inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
 box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
 .headertitle{width:100%;text-align: center; font-size: 16px; background:#29b6f6; color:#FFFFFF; border-radius: 3px;}
+.infoclass a{color: #000;
+text-decoration: none;}
+.infoclass a:hover{color:#29b6f6}
 </style>
+</p>
+
 <div class="headertitle">Academic Council</div>
+
 <div class="infoclass">Chairman:<br />
 A. K. M. Sayedul Haque Chowdhury<br />
 Vice Chancellor<br />
-phone: 62833 , 62655, 62733<br />
-mobile: 01730042888</div>
+phone: <a href="tel:+8832162833">62833</a> ,<a href="tel:+8832162655"> 62655</a>,<a href="tel:+8832162733"> 62733</a><br />
+mobile:<a href="tel:+8801730042888"> 01730042888</a></div>
 
 <p>Members</p>
 
 <div class="infoclass">Dean of the Faculty<br />
 Professor Dr. Md Abul Hossen<br />
 Dean, Science Faculty.<br />
-Phone: 62823<br />
-Mobile: 0173012916</div>
+Phone: <a href="tel:+8832162823">62823</a><br />
+Mobile: <a href="tel:+880173012916">0173012916</a></div>
 
 <p>Chairman of the departments</p>
 
 <div class="infoclass">Chairman<br />
 Computer Science and Telecommunication Engineering (CSTE)<br />
-Phone:71486<br />
-Mobile: 01814405238</div>
+Phone<a href="tel:+8832171486">:71486</a><br />
+Mobile:<a href="+8801814405238"> 01814405238</a></div>
 
 <div class="infoclass">Chairman&nbsp;&nbsp; &nbsp;<br />
 Fisheries and Marine Science (FIMS)<br />
-Phone:71484<br />
-Mobile: 01716783991</div>
+Phone:<a href="tel:+8832171484">71484</a><br />
+Mobile:<a href="tel:+8801716783991"> 01716783991</a></div>
 
 <div class="infoclass">Chairman&nbsp;&nbsp; &nbsp;<br />
 Pharmacy<br />
-Phone:71483<br />
-Mobile: 01711200410</div>
+Phone:<a href="tel:+8832171483">71483</a><br />
+Mobile:<a href="tel:+8801711200410"> 01711200410</a></div>
 
 <div class="infoclass">Chairman&nbsp;&nbsp; &nbsp;<br />
 Applied Chemistry &amp; Chemical Engineering (ACCE)<br />
-Phone:71485<br />
-Mobile: 01911110671</div>
+Phone:<a href="tel:+8801911110671"> 71485</a><br />
+Mobile:<a href="tel:+8801911110671"> 01911110671</a></div>
 
 <div class="infoclass">Chairman&nbsp;&nbsp; &nbsp;<br />
 Microbiology<br />
-Mobile: 01730042888</div>
+Mobile: <a href="tel:+8801730042888">01730042888</a></div>
 
 <div class="infoclass">Chairman&nbsp;&nbsp; &nbsp;<br />
 Applied Mathematics<br />
 Phone: 63298<br />
-Mobile: 01712018181</div>
+Mobile:  <a href="tel:+8801712018181">01712018181</a></div>
 
 <div class="infoclass">Chairman<br />
 English<br />
-Mobile: 01714402508</div>
+Mobile: <a href="tel:+8801714402508">01714402508</a></div>
 
 <div class="infoclass">Chairman<br />
 Food Technology and Nutrition Science(FTNS)<br />
-Mobile: 01730042888</div>
+Mobile: <a href="tel:+8801730042888">01730042888</a></div>
 
 <div class="infoclass">Chairman<br />
 Environmental Science and Hazard Studies(ESHS)<br />
-Mobile: 01913792542</div>
+Mobile: <a href="tel:+8801913792542">01913792542</a></div>
 
 <div class="infoclass">Chairman<br />
 Business Administration(BBA)<br />
-Mobile: 01730042888</div>
+Mobile: <a href="tel:+8801730042888"> 01730042888</a></div>
 
 <div class="infoclass">Chairman<br />
 Information and Communication Technology(ICT)<br />
-Mobile: 01836350710</div>
+Mobile: <a href="tel:+8801836350710">01836350710</a></div>
 
 <div class="infoclass">Chairman<br />
 Biotechnology and Genetic Engineering(BGE)<br />
-Mobile: 01730042888</div>
+Mobile: <a href="tel:+8801730042888">01730042888</a></div>
 
 <div class="infoclass">Chairman<br />
 Coastal Agriculture<br />
-Mobile: 01730042888<br />
+Mobile: <a href="tel:+8801730042888"> 01730042888</a><br />
 Md Jahangir Hossen</div>
 
 <div class="infoclass">Librarian<br />
-Phone: 71481<br />
-Mobile: 01716068982</div>
+Phone:<a href="tel:+8832171481"> 71481</a><br />
+Mobile:<a href="tel:+8801716068982"> 01716068982</a></div>
 
 <div class="infoclass">Dr. Md. Jahangir Sorkar<br />
 Associate Professor Fisheries and Marine Science (FIMS)<br />
-Mobile: 01733910237</div>
+Mobile:<a href="tel:+8801733910237"> 01733910237</a></div>
 
 <div class="infoclass">Dr. Md. Shamsul Alam<br />
 Chief Scientific Officer<br />
 Bangladesh Agricultural Research Institute<br />
 Gazipur.<br />
 Phone: 9252461<br />
-Mobile: 01715817734<br />
+Mobile: <a href="tel:+8801715817734">01715817734</a><br />
 &nbsp;</div>
 
 <div class="infoclass">Dr. Mohammed Amin<br />
 Chief Scientific Officer<br />
 Regional Agricultural Research Center<br />
 hathazari, chittagong<br />
-Mobile: 01819803229</div>
+Mobile:<a href="tel:+8801819803229"> 01819803229</a></div>
 
 <div class="infoclass">Professor Dr. M Kamruzzaman<br />
 Department of Agricultural Economics<br />
 Bangabandhu Sheikh Mujibur Rahman Agricultural University<br />
 Gazipur<br />
-Mobile: 01912980044</div>
+Mobile: <a href="tel:+8801912980044">01912980044</a></div>
 
 <div class="infoclass">Professor Dr. Kamal Uddin Ahmed<br />
 Department of Agricultural Botany<br />
 Sher-e-Bangla Agricultural University<br />
 Dhaka.<br />
-Phone: 01552601173</div>
+Phone:  <a href="tel:+8801552601173">01552601173</a></div>
 
 <div class="infoclass">Dr. Md Abu Taher<br />
 Dean, Science Faculty<br />
@@ -126,5 +133,15 @@ Vice Chancellors</div>
 
 <div class="infoclass">Register<br />
 Professor Md. Mominul Haque<br />
-Phone 62812, 71314<br />
-Mobile: 01720197824 &nbsp;</div>
+Phone  <a href="tel:+8832162812">62812</a>,<a href="tel:+8832171314"> 71314</a><br />
+Mobile: <a href="tel:+8801720197824">01720197824 </a>&nbsp;</div>
+
+<div id="__if72ru4rkjahiuyi_once" style="display:none;">&nbsp;</div>
+
+<div id="__if72ru4sdfsdfruh7fewui_once" style="display:none;">&nbsp;</div>
+
+<div id="__hggasdgjhsagd_once" style="display:none;">&nbsp;</div>
+
+<div id="__if72ru4rkjahiuyi_once" style="display:none;">&nbsp;</div>
+
+<div id="__if72ru4rkjahiuyi_once" style="display:none;">&nbsp;</div>
