--- a/assets/ignoreit/regent.html
+++ b/assets/ignoreit/regent.html
@@ -4,6 +4,9 @@ box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
 .headertitle{width:100%; font-size: 16px; background:#29b6f6; color:#FFFFFF; border-radius: 3px;}
+.infoclass a{color: #000;
+text-decoration: none;}
+.infoclass a:hover{color:#29b6f6}
 </style>
 <div class="headertitle">Chairman</div>
 <p style="text-align: center;"><strong>Chairman</strong></p>
@@ -22,24 +25,24 @@ Mobile: +880-1730-042888</div>
 <div class="infoclass"><strong>Mr. Mohammed Ekramul Karim Chowdhury</strong><br />
 MP<br />
 Noakhali-4, Noakhali.<br />
-Mobile: +880-1713-216140</div>
+Mobile:  <a href="tel:+8801713216140">01713216140</a></div>
 
 <div class="infoclass"><strong>Mr. A.B.M Fazle Karim Chowdhury</strong><br />
 MP<br />
 Chittagong-6, Chittagong<br />
-Mobile: +880-1726-000480</div>
+Mobile: <a href="tel:+8801726-000480">01726000480</a></div>
 
 <p style="text-align: center;">&nbsp;Two members of joint-secretary rank nominated by the government.</p>
 
 <div class="infoclass"><strong>Additional Secretary (Development)</strong><br />
 Ministry of Education, The People&rsquo;s Republic of Bangladesh Government<br />
 Bangladesh Secretariat, Dhaka-1000.<br />
-Telephone: +880-2-9556789</div>
+Telephone:<a href="tel:+88029556789"> +880-2-9556789</a></div>
 
 <div class="infoclass"><strong>Additional Secretary (University)</strong><br />
 Ministry of Education, The People&rsquo;s Republic of Bangladesh Government<br />
 Bangladesh Secretariat, Dhaka-1000.<br />
-Telephone: +880-2-9512285</div>
+Telephone: <a href="tel:+88029512285">+880-2-9512285</a></div>
 
 <p style="text-align: center;">Three members from the research institute of Science and Technology Affairs nominated by the government.</p>
 
@@ -47,8 +50,8 @@ Telephone: +880-2-9512285</div>
 Chairman, BCSIR.<br />
 Dr. Qudrat-E-Khuda road,<br />
 Dhanmondi, Dhaka-1205.<br />
-Telephone: +880-2-8613511<br />
-Mobile: +880-1819-240980</div>
+Telephone: <a href="tel:+88028613511">+880-2-8613511</a><br />
+Mobile:<a href="tel:+8801819240980"> +880-1819-240980</a></div>
 
 <div class="infoclass"><strong>Dr. Md. Rafiqul Islam Mondal</strong><br />
 Director-General<br />
@@ -59,7 +62,7 @@ Joydebpur, Gazipur.</div>
 Chairman<br />
 Department of Disaster Science and Management<br />
 Dhaka University, Dhaka-1000.<br />
-Phone: 01937894557</div>
+Phone: <a href="tel:+8801937894557">01937894557</a></div>
 
 <p style="text-align: center;">Three prominent educationist nominated by the Chancellor.</p>
 
@@ -68,44 +71,44 @@ Department of Plant Pathology<br />
 Bangabandhu Sheikh Mujibur Rahman Agricultural University.<br />
 Gazipur.<br />
 Phone: 9205336<br />
-Mobile: 01755593159</div>
+Mobile: <a href="tel:+8801755593159">01755593159</a></div>
 
 <div class="infoclass"><strong>Prof. Dr. Shariff Enamul Kabir</strong><br />
 Department of Chemistry<br />
 Jahangirnagar University<br />
 Savar, Dhaka.<br />
-Phone: 01713464698</div>
+Phone: <a href="tel:+8801713464698">01713464698</a></div>
 
 <div class="infoclass"><strong>Prof. Dr. Amir Hossain Khan</strong><br />
 Department of Physics<br />
 Jahangirnagar University<br />
 Savar, Dhaka.<br />
-Phone: 01911021808</div>
+Phone:<a href="tel:+8801911021808">01911021808</a></div>
 
 <p style="text-align: center;">Chairman, Intermediate and Secondary Education Boards Bangladesh</p>
 
 <div class="infoclass"><strong>Chairman</strong><br />
 Intermediate and Secondary Education Board.<br />
 Chittagong.<br />
-Phone: 031-670125<br />
-Phone: 01711723224</div>
+Phone:<a href="tel:+88031670125"> 031-670125</a><br />
+Phone: <a href="tel:+8801711723224">01711723224</a></div>
 
 <p style="text-align: center;">Three representatives from the teachers of this university nominated by the academic council.</p>
 
 <div class="infoclass"><strong>Prof. Dr. Md. Abul Hossain</strong><br />
 Dean, Faculty of Science<br />
-Phone: 62823<br />
-Mobile: 01733910237</div>
+Phone: <a href="tel:+8832162823">62823</a><br />
+Mobile:<a href="tel:+8801733910237"> 01733910237</a></div>
 
 <div class="infoclass"><strong>Dr. Md. Jahangir Sarkar</strong><br />
 Associate Professor<br />
 Department of Fisheries and Marine Science<br />
-Mobile: 01733910237</div>
+Mobile:<a href="tel:+8801733910237"> 01733910237</a></div>
 
 <div class="infoclass"><strong>Dr. Md. Selim Hossain</strong><br />
 Associate Professor<br />
 Department of Pharmacy<br />
-Mobile: 01711200410</div>
+Mobile: <a href="tel:+8801711200410">01711200410</a></div>
 
 <p style="text-align: center;">Members from industries and business personality nominated by the government.</p>
 
@@ -114,18 +117,18 @@ Director-General<br />
 Globe Pharmaceuticals Group of Companies Limited.<br />
 Chowmuhoni, Noakhali. &nbsp;<br />
 Phone: 52079<br />
-Mobile:&nbsp; 01817211113</div>
+Mobile:&nbsp;  <a href="tel:+8801817211113">01817211113</a></div>
 
 <p style="text-align: center;">Two members of the rank of principal and professor from different institutes of greater Noakhali region nominated by the academic council.</p>
 
 <div class="infoclass"><strong>Principal</strong><br />
 Noakhali Govt. College.<br />
 Noakhali<br />
-Phone: 61594<br />
-Mobile: 01718862934</div>
+Phone:<a href="tel:+8832161594"> 61594</a><br />
+Mobile: <a href="tel:+8801718862934">01718862934</a></div>
 
 <div class="infoclass"><strong>Principal</strong><br />
 Noakhali Govt Women College.<br />
 Noakhali.<br />
-Phone: 61198<br />
-Mobile: 01711022540</div>
+Phone: <a href="tel:+8832161198">61198</a><br />
+Mobile:  <a href="tel:+8801711022540">01711022540</a></div>
