--- a/assets/ignoreit/introduction.html
+++ b/assets/ignoreit/introduction.html
@@ -1,11 +1,24 @@
-<style type="text/css">.infoclass{ font-size:14px;padding:8px; margin-bottom:3px; border-radius: 3px;  background-color:white;-webkit-box-shadow: inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
+<style type="text/css">.infoclass{ font-size:15px;padding:8px; margin-bottom:3px; border-radius: 3px;  background-color:white;-webkit-box-shadow: inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
 -moz-box-shadow:    inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
 box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
-.headertitle{width:100%;text-align: center; font-size: 16px; background:#29b6f6; color:#FFFFFF; border-radius: 3px;}
+.headertitle{width:100%; font-size: 17px; background:#29b6f6; color:#FFFFFF; border-radius: 3px; text-align: center}
+.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
+.telephone {
+    background-image: url("http://i61.tinypic.com/n6xtmw.png");
+    background-position: 0 0px;
+    background-repeat: no-repeat;
+    background-size: 20px auto;
+    color: black;
+    padding-bottom: 3px;
+    padding-left: 22px;
+    text-decoration: none;
+    padding-top: 2px;
+}
+.telephone:hover{color:#29b6f6}
 </style>
-<div class="headertitle">Introduction</div>
+<div class="maintitle">Introduction</div>
 
 <div class="infoclass">
 <p><u><strong>Establishment:</strong> </u><br />
@@ -13,34 +26,34 @@ p{font-size:15px}
 <strong>Bill Effective at:</strong> 25th August, 2003<br />
 <strong>Academic program started from:</strong> 22nd June, 2006<br />
 <strong>Location:</strong> 8 Kilometer south from Noakhali Town, and at the west side of Sonapur-Char Jabbar road.<br />
-<strong>Area:</strong> 100 Acres.<br />
+<strong>Area:</strong> 101 Acres.<br />
 <strong>Faculty:</strong> 3<br />
 &nbsp;<br />
 <u><strong>Departments:</strong> </u><br />
-1. Computer Science and Telecommunication Engineering (CSTE)<br />
-2. Applied Chemistry &amp; Chemical Engineering (ACCE)<br />
-3. Fisheries and Marine Science (FIMS)<br />
-4. Pharmacy<br />
-5. Microbiology<br />
-6.&nbsp; Applied Mathematics<br />
-7. English<br />
-8. Environmental Science and Hazard Studies(ESHS)<br />
-9. Food Technology and Nutrition Science(FTNS)<br />
+01. Computer Science and Telecommunication Engineering (CSTE)<br />
+02. Fisheries and Marine Science (FIMS)<br />
+03. Pharmacy<br />
+04. Applied Chemistry &amp; Chemical Engineering (ACCE)<br />
+05. Microbiology<br />
+06. Applied Mathematics<br />
+07. English<br />
+08. Environmental Science and Hazard Studies(ESHS)<br />
+09. Food Technology and Nutrition Science(FTNS)<br />
 10. Business Administration(BBA)<br />
 11. Information and Communication Technology(ICT)<br />
 12. Biotechnology and Genetic Engineering(BGE)<br />
 13. Economics and Poverty Studies(EPS)<br />
 14. Coastal Agriculture<br />
-&nbsp;<br />
+<br />
 <strong>Medium:</strong> English<br />
-<strong>Students: </strong>2500<br />
-<strong>Teachers:</strong> 90<br />
+<strong>Students: </strong>3000<br />
+<strong>Teachers:</strong> 150<br />
 <strong>Officers:</strong> 50<br />
 <strong>Staffs: </strong>167<br />
 <strong>Academic Buildings: </strong>2<br />
 <strong>Administrative Building(s):</strong> 1<br />
 <strong><u>Halls</u>: </strong>2<br />
-1. Vasha Sohid Abdus Salam Hall<br />
+1. Vasha Saheed Abdus Salam Hall<br />
 2. Hajrat Bibi Khadija Hall<br />
 &nbsp;<br />
 <strong>Dormitory:</strong> 2 (Teachers&#39; Dormatory &amp; Staffs&#39; Dormatory)<br />
