--- a/assets/ignoreit/academic_council.html
+++ b/assets/ignoreit/academic_council.html
@@ -1,147 +1,214 @@
-
-<style type="text/css">.infoclass{ font-size:14px;padding:8px; margin-bottom:3px; border-radius: 3px;  background-color:white;-webkit-box-shadow: inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
+<style type="text/css">.infoclass{ font-size:15px;padding:8px; margin-bottom:3px; border-radius: 3px;  background-color:white;-webkit-box-shadow: inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
 -moz-box-shadow:    inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
 box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
-.headertitle{width:100%;text-align: center; font-size: 16px; background:#29b6f6; color:#FFFFFF; border-radius: 3px;}
-.infoclass a{color: #000;
-text-decoration: none;}
-.infoclass a:hover{color:#29b6f6}
+.headertitle{width:100%; font-size: 17px; background:#29b6f6; color:#FFFFFF; border-radius: 3px; text-align: center}
+.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
+.telephone {
+    background-image: url("http://i61.tinypic.com/n6xtmw.png");
+    background-position: 0 0px;
+    background-repeat: no-repeat;
+    background-size: 20px auto;
+    color: black;
+    padding-bottom: 3px;
+    padding-left: 22px;
+    text-decoration: none;
+    padding-top: 2px;
+}
+.telephone:hover{color:#29b6f6}
 </style>
-</p>
+<div class="maintitle">Academic Council</div>
 
-<div class="headertitle">Academic Council</div>
+<div>
+<div>
+<div class="headertitle">Chairman</div>
+</div>
 
-<div class="infoclass">Chairman:<br />
-A. K. M. Sayedul Haque Chowdhury<br />
-Vice Chancellor<br />
-phone: <a href="tel:+8832162833">62833</a> ,<a href="tel:+8832162655"> 62655</a>,<a href="tel:+8832162733"> 62733</a><br />
-mobile:<a href="tel:+8801730042888"> 01730042888</a></div>
+<div>
+<div class="infoclass">
+<div><strong>A. K. M. Sayedul Haque Chowdhury</strong></div>
 
-<p>Members</p>
+<div>Vice Chancellor</div>
 
-<div class="infoclass">Dean of the Faculty<br />
-Professor Dr. Md Abul Hossen<br />
-Dean, Science Faculty.<br />
-Phone: <a href="tel:+8832162823">62823</a><br />
-Mobile: <a href="tel:+880173012916">0173012916</a></div>
+<div>phone: <a class="telephone" href="tel:62833">62833</a> , <a class="telephone" href="tel:62655">62655</a>, <a class="telephone" href="tel:62655">62733</a></div>
 
-<p>Chairman of the departments</p>
+<div>mobile: <a class="telephone" href="tel:01730042888">01730042888</a></div>
+</div>
 
-<div class="infoclass">Chairman<br />
-Computer Science and Telecommunication Engineering (CSTE)<br />
-Phone<a href="tel:+8832171486">:71486</a><br />
-Mobile:<a href="+8801814405238"> 01814405238</a></div>
+<div>&nbsp;</div>
 
-<div class="infoclass">Chairman&nbsp;&nbsp; &nbsp;<br />
+<div>
+<div class="headertitle">Members</div>
+</div>
+
+<div class="infoclass">
+<div>Dean of the Faculty</div>
+
+<div><strong>Professor Dr. Md Abul Hossen</strong></div>
+
+<div>Dean, Science Faculty.</div>
+
+<div>Phone: <a class="telephone" href="tel:62823">62823</a></div>
+
+<div>Mobile: <a class="telephone" href="tel:0173012916">0173012916</a></div>
+</div>
+
+<ul>
+	<li><span style="font-size:16px;">Chairman of the departments</span></li>
+</ul>
+
+<div class="infoclass">
+<div><strong>Chairman</strong></div>
+
+<div>Computer Science and Telecommunication Engineering (CSTE)</div>
+</div>
+
+<div>
+<div class="infoclass">
+<div><strong>Chairman</strong></div>
+
+<div>Fisheries and Marine Science (FIMS)</div>
+</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+Pharmacy</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+Applied Chemistry &amp; Chemical Engineering (ACCE)</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+Microbiology</div>
+
+<div class="infoclass">
+<div><strong>Chairman</strong></div>
+Applied Mathematics</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+English</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+Food Technology and Nutrition Science(FTNS)</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+Environmental Science and Hazard Studies(ESHS)</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+Business Administration(BBA)</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+Information and Communication Technology(ICT)</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+Biotechnology and Genetic Engineering(BGE)</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+Economics and Poverty Studies(EPS)</div>
+
+<div class="infoclass"><strong>Chairman</strong><br />
+Coastal Agriculture</div>
+
+<div class="infoclass"><strong>Md Jahangir Hossen</strong><br />
+Librarian<br />
+Phone: 71481<br />
+Mobile: 01716068982</div>
+
+<div class="infoclass"><strong>Dr. Md. Jahangir Sorkar</strong><br />
+Associate Professor<br />
 Fisheries and Marine Science (FIMS)<br />
-Phone:<a href="tel:+8832171484">71484</a><br />
-Mobile:<a href="tel:+8801716783991"> 01716783991</a></div>
+Mobile: <a class="telephone" href="tel:01733910237">01733910237</a></div>
+</div>
+</div>
 
-<div class="infoclass">Chairman&nbsp;&nbsp; &nbsp;<br />
-Pharmacy<br />
-Phone:<a href="tel:+8832171483">71483</a><br />
-Mobile:<a href="tel:+8801711200410"> 01711200410</a></div>
+<div class="infoclass">
+<div><strong>Dr. Md. Shamsul Alam</strong></div>
 
-<div class="infoclass">Chairman&nbsp;&nbsp; &nbsp;<br />
-Applied Chemistry &amp; Chemical Engineering (ACCE)<br />
-Phone:<a href="tel:+8801911110671"> 71485</a><br />
-Mobile:<a href="tel:+8801911110671"> 01911110671</a></div>
+<div>Chief Scientific Officer</div>
 
-<div class="infoclass">Chairman&nbsp;&nbsp; &nbsp;<br />
-Microbiology<br />
-Mobile: <a href="tel:+8801730042888">01730042888</a></div>
+<div>Bangladesh Agricultural Research Institute</div>
 
-<div class="infoclass">Chairman&nbsp;&nbsp; &nbsp;<br />
-Applied Mathematics<br />
-Phone: 63298<br />
-Mobile:  <a href="tel:+8801712018181">01712018181</a></div>
+<div>Gazipur.</div>
 
-<div class="infoclass">Chairman<br />
-English<br />
-Mobile: <a href="tel:+8801714402508">01714402508</a></div>
+<div>Phone: <a class="telephone" href="tel:9252461">9252461</a></div>
 
-<div class="infoclass">Chairman<br />
-Food Technology and Nutrition Science(FTNS)<br />
-Mobile: <a href="tel:+8801730042888">01730042888</a></div>
+<div>
+<div>Mobile: <a class="telephone" href="tel:01715817734">01715817734</a></div>
+</div>
+</div>
 
-<div class="infoclass">Chairman<br />
-Environmental Science and Hazard Studies(ESHS)<br />
-Mobile: <a href="tel:+8801913792542">01913792542</a></div>
+<div>
+<div>
+<div>
+<div class="infoclass">
+<div><strong>Dr. Mohammed Amin</strong></div>
 
-<div class="infoclass">Chairman<br />
-Business Administration(BBA)<br />
-Mobile: <a href="tel:+8801730042888"> 01730042888</a></div>
+<div>Chief Scientific Officer</div>
 
-<div class="infoclass">Chairman<br />
-Information and Communication Technology(ICT)<br />
-Mobile: <a href="tel:+8801836350710">01836350710</a></div>
+<div>Regional Agricultural</div>
 
-<div class="infoclass">Chairman<br />
-Biotechnology and Genetic Engineering(BGE)<br />
-Mobile: <a href="tel:+8801730042888">01730042888</a></div>
+<div>Research Centerhathazari,</div>
 
-<div class="infoclass">Chairman<br />
-Coastal Agriculture<br />
-Mobile: <a href="tel:+8801730042888"> 01730042888</a><br />
-Md Jahangir Hossen</div>
+<div>Chittagong</div>
 
-<div class="infoclass">Librarian<br />
-Phone:<a href="tel:+8832171481"> 71481</a><br />
-Mobile:<a href="tel:+8801716068982"> 01716068982</a></div>
+<div>Mobile: <a class="telephone" href="tel:01819803229">01819803229</a></div>
+</div>
+</div>
+</div>
+</div>
 
-<div class="infoclass">Dr. Md. Jahangir Sorkar<br />
-Associate Professor Fisheries and Marine Science (FIMS)<br />
-Mobile:<a href="tel:+8801733910237"> 01733910237</a></div>
+<div>
+<div class="infoclass">
+<div><strong>Professor Dr. M Kamruzzaman</strong></div>
 
-<div class="infoclass">Dr. Md. Shamsul Alam<br />
-Chief Scientific Officer<br />
-Bangladesh Agricultural Research Institute<br />
-Gazipur.<br />
-Phone: 9252461<br />
-Mobile: <a href="tel:+8801715817734">01715817734</a><br />
-&nbsp;</div>
+<div>Department of Agricultural Economics</div>
 
-<div class="infoclass">Dr. Mohammed Amin<br />
-Chief Scientific Officer<br />
-Regional Agricultural Research Center<br />
-hathazari, chittagong<br />
-Mobile:<a href="tel:+8801819803229"> 01819803229</a></div>
+<div>Bangabandhu Sheikh Mujibur Rahman Agricultural University</div>
 
-<div class="infoclass">Professor Dr. M Kamruzzaman<br />
-Department of Agricultural Economics<br />
-Bangabandhu Sheikh Mujibur Rahman Agricultural University<br />
-Gazipur<br />
-Mobile: <a href="tel:+8801912980044">01912980044</a></div>
+<div>Gazipur</div>
 
-<div class="infoclass">Professor Dr. Kamal Uddin Ahmed<br />
-Department of Agricultural Botany<br />
-Sher-e-Bangla Agricultural University<br />
-Dhaka.<br />
-Phone:  <a href="tel:+8801552601173">01552601173</a></div>
+<div>Mobile: <a class="telephone" href="tel:01912980044">01912980044</a></div>
+</div>
+</div>
 
-<div class="infoclass">Dr. Md Abu Taher<br />
-Dean, Science Faculty<br />
-Comilla University<br />
-kotbari, comilla.</div>
+<div class="infoclass">
+<div><strong>Professor Dr. Kamal Uddin Ahmed</strong></div>
 
-<p>Controller of Examinations(Addtional)</p>
+<div>Department of Agricultural Botany</div>
 
-<div class="infoclass">A. K. M. Sayedul Haque Chowdhury<br />
-Vice Chancellors</div>
+<div>Sher-e-Bangla Agricultural University<br />
+Sher-e-bangla nagar,Dhaka-1207</div>
 
-<div class="infoclass">Register<br />
-Professor Md. Mominul Haque<br />
-Phone  <a href="tel:+8832162812">62812</a>,<a href="tel:+8832171314"> 71314</a><br />
-Mobile: <a href="tel:+8801720197824">01720197824 </a>&nbsp;</div>
+<div>Phone: <a class="telephone" href="tel:01552601173">01552601173</a></div>
+</div>
 
-<div id="__if72ru4rkjahiuyi_once" style="display:none;">&nbsp;</div>
+<div class="infoclass">
+<div><strong>Dr. Md Abu Taher</strong></div>
 
-<div id="__if72ru4sdfsdfruh7fewui_once" style="display:none;">&nbsp;</div>
+<div>Dean, Science Faculty</div>
 
-<div id="__hggasdgjhsagd_once" style="display:none;">&nbsp;</div>
+<div>Comilla University</div>
 
-<div id="__if72ru4rkjahiuyi_once" style="display:none;">&nbsp;</div>
+<div>kotbari, comilla.<br />
+Phone: <a class="telephone" href="tel:01711198295">01711198295</a></div>
+</div>
 
-<div id="__if72ru4rkjahiuyi_once" style="display:none;">&nbsp;</div>
+<div class="infoclass">
+<div>Controller of Examinations(Addtional)</div>
+
+<div><strong>A. K. M. Sayedul Haque Chowdhury</strong></div>
+
+<div>
+<div>Vice Chancellors</div>
+</div>
+</div>
+
+<div class="infoclass">
+<div>Register</div>
+
+<div><strong>Professor Md. Mominul Haque</strong></div>
+
+<div>Phone <a class="telephone" href="tel:62812">62812</a>, <a class="telephone" href="tel:71314">71314</a></div>
+
+<div>Mobile: <a class="telephone" href="tel:01720197824">01720197824</a>&nbsp;&nbsp;</div>
+</div>
+</div>
