working with register office

--- a/assets/ignoreit/academic_council.html
+++ b/assets/ignoreit/academic_council.html
@@ -45,7 +45,7 @@ p{font-size:15px}
 <div class="infoclass">
 <div>Dean of the Faculty</div>
 
-<div><strong>Professor Dr. Md Abul Hossen</strong></div>
+<div><strong>Professor Dr. Md Abul Hossain</strong></div>
 
 <div>Dean, Science Faculty.</div>
 
@@ -108,7 +108,7 @@ Economics and Poverty Studies(EPS)</div>
 <div class="infoclass"><strong>Chairman</strong><br />
 Coastal Agriculture</div>
 
-<div class="infoclass"><strong>Md Jahangir Hossen</strong><br />
+<div class="infoclass"><strong>Md Jahangir Hossain</strong><br />
 Librarian<br />
 Phone: 71481<br />
 Mobile: 01716068982</div>
