--- a/assets/ignoreit/regent.html
+++ b/assets/ignoreit/regent.html
@@ -25,7 +25,7 @@ p{font-size:15px}
 <div class="infoclass"><strong>Prof. Dr. A. K. M. Sayedul Haque Chowdhury</strong><br />
 Vice Chancellor<br />
 Telephone: <a class="telephone" href="tel:+880-321-62833">+880-321-62833</a>, <a class="telephone" href="tel:62733">62733</a>, <a class="telephone" href="tel:62655">62655</a>.<br />
-Mobile: <a class="telephone" href="tel:1">01730042888</a></div>
+Mobile: <a class="telephone" href="tel:01730042888">01730042888</a></div>
 
 <div class="headertitle">Members:</div>
 
