--- a/assets/ignoreit/registeroffice.html
+++ b/assets/ignoreit/registeroffice.html
@@ -1,148 +1,359 @@
-
-<style type="text/css">.infoclass{ font-size:14px;padding:8px; margin-bottom:3px; border-radius: 3px;  background-color:white;-webkit-box-shadow: inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
+<style type="text/css">.infoclass{ font-size:15px;padding:8px; margin-bottom:3px; border-radius: 3px;  background-color:white;-webkit-box-shadow: inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
 -moz-box-shadow:    inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);
 box-shadow:         inset 0px 0px 2px 0px rgba(49, 50, 50, 0.67);}
 body{background-color:#f5f5f5; font-family:serif; line-height:1.3em; border:3px solid #29b6f6; 	border-radius: 6px; padding:3px; padding-top:8px }
 p{font-size:15px}
-.headertitle{width:100%;text-align: center; font-size: 16px; background:#29b6f6; color:#FFFFFF; border-radius: 3px;}
-.infoclass a{color: #000;
-text-decoration: none;}
-.infoclass a:hover{color:#29b6f6}
+.headertitle{width:100%; font-size: 17px; background:#29b6f6; color:#FFFFFF; border-radius: 3px; text-align: center}
+.maintitle{font-weight:bold;width:100%; font-size: 16px; background:#039be5; color:#FFFFFF; border-radius: 15px;padding-top:10px; padding-bottom:10px; text-align: center; margin-bottom:10px}
+.telephone {
+    background-image: url("http://i61.tinypic.com/n6xtmw.png");
+    background-position: 0 0px;
+    background-repeat: no-repeat;
+    background-size: 20px auto;
+    color: black;
+    padding-bottom: 3px;
+    padding-left: 22px;
+    text-decoration: none;
+    padding-top: 2px;
+}
+.telephone:hover{color:#29b6f6}
 </style>
+<div class="maintitle">Register Office</div>
 
-<div class="headertitle">Register Office</div>
-<p style="text-align: center;"><strong>Vice Chancellor</strong></p>
+<div class="headertitle">Vice Chancellor Office</div>
 
-<div class="infoclass"><strong>A. K. M. Sayedul Haque Chowdhury</strong><br />
-<br />
-phone: <a href="tel:+88032162833">62833 </a>,<br />
-<a href="tel:+88032162655">62655</a>,<br />
-<a href="tel:+88032162733">62733</a><br />
-mobile:<a href="tel:+8801730042888"> 01730042888</a><br />
-Email:<a href="mailto:Akmshc@yahoo.com">Akmshc@yahoo.com</a>
-</div>
-<p style="text-align: center;"><strong>Section Officer</strong></p>
-<div class="infoclass"><strong>Mr. Khaled Mehedi Hasan</strong><br />
-<br />
-mobile:<a href="tel:+8801717827338"> 01717827338</a><br />
-Email:<a href="mailto:khaledju@gmail.com">khaledju@gmail.com</a>
-</div>
-<div class="headertitle">Dean office, Science faculty</div>
-<p style="text-align: center;"><strong>Dean</strong></p>
-<div class="infoclass"><strong>professor Dr md. Abul Hossain</strong><br />
-<br />
-phone:<a href="tel:+88032162823">62823</a><br />
-mobile:<a href="tel:+8801713012916"> 01713012916</a><br />
-Email:<a href="mailto:mah1754@gmail.com">mah1754@gmail.com</a>
-</div>
+<div class="infoclass">A. K. M. Sayedul Haque Chowdhury<br />
+Vice Chancellor<br />
+phone: +880-321-62833 ,<br />
++880-321-62655,<br />
++880-321-62733<br />
+mobile: 01730042888<br />
+Email: Akmshc@yahoo.com</div>
 
-<p style="text-align: center;"><strong>personal secretary </strong></p>
-<div class="infoclass"><strong>Mr.Md. Kamrul Hasan</strong><br />
-<br />
+<div class="infoclass">Section Officer<br />
+Mr. Khaled Mehedi Hasan<br />
+mobile:01717827338<br />
+E-mail:khaledju@gmail.com</div>
 
-mobile:<a href="tel:+8801713616399"> 01713616399</a><br />
-Email:<a href="mailto:meru.nstu@yahoo.com">meru.nstu@yahoo.com</a>
-</div>
-<div class="headertitle">Register Office</div>
-<p style="text-align: center;"><strong>Register: </strong></p>
-<div class="infoclass"><strong>Professor Md. Mominul Haque</strong><br />
-<br />
-phone:<a href="tel:+88032162812">62812</a><br />
-<a href="tel:+88032171314">71314</a><br />
-mobile:<a href="tel:+8801720197824"> 01720197824</a><br />
-<a href="tel:+8801712072936"> 01712072936</a><br />
-Email:<a href="mailto:infonstu@yahoo.com">infonstu@yahoo.com</a>
-</div>
-<p style="text-align: center;"><strong>Sub-Register: </strong></p>
-<div class="infoclass"><strong>Mr. Md.Jashim Uddin</strong><br />
-<br />
-mobile:<a href="tel:+8801819834393"> 01819834393</a><br />
-Email:<a href="mailto:jashim_uu@yahoo.com">jashim_uu@yahoo.com</a>
+<div class="infoclass">
+<p>Dean office, Science faculty<br />
+Dean<br />
+professor Dr md. Abul Hossain<br />
+phone:+880-321-62823<br />
+mobile:01713012916<br />
+E-mail:mah1754@gmail.com<br />
+&nbsp;</p>
 </div>
 
-<p style="text-align: center;"><strong>Assistant Register </strong></p>
-<div class="infoclass"><strong>Mr. Md.Golap Hossain</strong><br />
-<br />
-mobile:<a href="tel:+8801827522677"> 01827522677</a><br />
-Email:<a href="mailto:golapshah77@yahoo.com">golapshah77@yahoo.com</a>
-</div>
-<p style="text-align: center;"><strong>Section Officer </strong></p>
-<div class="infoclass"><strong>Mr.Aa Sha M Sharifor Rahman(study leave)<br />
-Mr.Aa Sha M Sharifor Rahman(study leave)
-</strong><br />
-<br />
-mobile:<a href="tel:+8801918232222"> 01918232222</a><br />
-Email:<a href="mailto:arif.cu@gmail.com">arif.cu@gmail.com</a>
+<div class="infoclass">
+<p>Personal secretary &nbsp;<br />
+Mr.Md. Kamrul Hasan<br />
+Mobile:01713616399<br />
+E-mail:meru.nstu@yahoo.com &nbsp;<br />
+&nbsp;</p>
 </div>
 
-<div class="infoclass"><strong>Mr.Mohammad Ullah<br />
-MS and Research cell
-</strong><br />
-<br />
-mobile:<a href="tel:+8801717815750"> 01717815750</a><br />
-Email:<a href="mailto:babarmgtjnu@yahoo.com">babarmgtjnu@yahoo.com</a>
-</div>
+<p>Register office</p>
 
-<div class="infoclass"><strong>Mrs.Shahanara Begum
-</strong><br />
-<br />
-mobile:<a href="tel:+8801814312632"> 01814312632</a><br />
+<div class="infoclass">Register:<br />
+Professor Md. Mominul Haque<br />
+phone:+880-321-62812;<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; +880-321-71314;<br />
+Mobile:01720197824;<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 01712072936;<br />
+E-mail:infonstu@yahoo.com</div>
 
-</div>
-<div class="headertitle">Establishment Branch:</div>
-<p style="text-align: center;"><strong>Section Officer </strong></p>
-<div class="infoclass"><strong>Mr. Md Abdur Rahman
-</strong><br />
-<br />
-mobile:<a href="tel:+8801716239906"> 01716239906</a><br />
-Email:<a href="mailto:ars_nstu@yahoo.com ">ars_nstu@yahoo.com </a>
-</div>
+<p>Academic Section</p>
 
-<p style="text-align: center;"><strong>Sub-Register </strong></p>
-<div class="infoclass"><strong>Dr.Mohammad Alamgir Sarkar
-</strong><br />
-<br />
-mobile:<a href="tel:+8801849120444"> 01849120444</a><br />
-Email:<a href="mailto:sarkar_2003@yahoo.com ">sarkar_2003@yahoo.com</a>
-</div>
+<div class="infoclass">Sub-Register:<br />
+Mr. Md.Jashim Uddin<br />
+Mobile:01819834393<br />
+E-mail:jashim_uu@yahoo.com &nbsp; Assistant Register:<br />
+Mr. Md.Golap Hossain<br />
+Mobile:01827522677<br />
+E-mail:golapshah77@yahoo.com Section Officer:</div>
 
-<p style="text-align: center;"><strong>Section Officer</strong></p>
-<div class="infoclass"><strong>Mrs. Riyanta Soltana
-</strong><br />
-<br />
-mobile:<a href="tel:+8801849120444"> 01711124658</a><br />
-Email:<a href="mailto:riyantanstu@gmail.com">riyantanstu@gmail.com</a>
-</div>
+<div class="infoclass">Mr.Aa Sha M Sharifor Rahman(study leave)<br />
+MS and Research cell<br />
+Mobile:01918232222<br />
+E-mail:sarif.cu@gmail.com</div>
 
-<p style="text-align: center;"><strong>Medical Centre</strong></p>
-<div class="infoclass"><strong>Senior medical officer
-Dr.Mohammad Arafat Rahman
-</strong><br />
-<br />
-mobile:<a href="tel:+8801925476993"> 01925476993</a><br />
-Email:<a href="mailto:riyantanstu@gmail.com">rousseau777@yahoo.com</a>
-</div>
+<div class="infoclass">Mr.Mohammad Ullah<br />
+MS and Research cell<br />
+Mobile:01717815750<br />
+E-mail:babarmgtjnu@yahoo.com</div>
 
-<p style="text-align: center;"><strong>Assistant Register</strong></p>
-<div class="infoclass"><strong>Mr. mohammad Tamzid Hossain Chaudhory
-</strong><br />
+<div class="infoclass">Mrs.Shahanara Begum<br />
+Mobile:01814312632;</div>
+
+<p>Establishment Branch:<br />
+&nbsp;<br />
+Section Officer:<br />
+Mr. Md Abdur Rahman<br />
+Mobile:01716239906;<br />
+E-mail:ars_nstu@yahoo.com<br />
+&nbsp;<br />
+Administration Branch:<br />
+&nbsp;<br />
+Sub-Register:<br />
+Dr.Mohammad Alamgir Sarkar<br />
+Mobile:01849120444<br />
+E-mail: sarker_2003@yahoo.com<br />
+&nbsp;<br />
+Section Officer:<br />
+Mrs. Riyanta Soltana<br />
+Mobile:01711124658<br />
+E-mail:riyantanstu@gmail.com<br />
+&nbsp;<br />
+Medical Centre:<br />
+&nbsp;<br />
+Senior medical officer<br />
+Dr.Mohammad Arafat Rahman<br />
+Mobile:01925476993<br />
+E-mail:rousseau777@yahoo.com<br />
+&nbsp;<br />
+Public Relation Branch And Guest house on Dhaka:<br />
+&nbsp;<br />
+Assistant Register:<br />
+Mr. mohammad Tamzid Hossain Chowdhury<br />
+Mobile:01733998894<br />
+E-mail:tamzidnstu@gmail.com<br />
+&nbsp;<br />
+Guest house on Dhaka<br />
+Mobile:01934384890<br />
+&nbsp;<br />
+Estate and Housing Branch:<br />
+Assistant Register:<br />
+Mr. Mohammad saifuddin<br />
+Mobile:01817584882<br />
+E-mail:saif_nstu2013@yahoo.com<br />
+Mr. Mohammad Abdur Rahim Bhuiyan<br />
+Mobile:01711284910;<br />
+E-mail:bhuiyannstu@yahoo.com<br />
+&nbsp;<br />
+Networking and IT Branch:<br />
+System annalist:<br />
+Engineer Md. Abdullah Hil Faruk<br />
+(study leave)<br />
+Mobile:01715404356;<br />
+E-mail:mahfaruk@yahoo.com Assistant programmer<br />
+Mr. Md. Moyeenuddin<br />
+Mobile:01720847993<br />
+E-mail:moyeen.cste@gmail.com<br />
+&nbsp;<br />
+Transport section:<br />
+Section officer<br />
+Mr. Tarek Md.Rashed Uddin<br />
+Mobile:01717688481<br />
+E-mail: rashaduddin@yahoo.com<br />
+&nbsp;<br />
+Safety Branch:<br />
+Section officer<br />
+Mr. Mohammad Abdul Kader<br />
+Mobile:01711021478<br />
+E-mail:rahman.nstu@yahoo.com<br />
+&nbsp;<br />
+Ansar Forces &nbsp;<br />
+PC,Ansar<br />
+Mobile:01727516565;<br />
+&nbsp;<br />
+Central store:<br />
+Store officer<br />
+Mr. Mohammad Abdullah Al Faruk<br />
+Mobile:01716341228<br />
+Email: sumonhinsa@yahoo.com<br />
+&nbsp;<br />
+Mr Mohammad Monir Hossain<br />
+Mobile:01734008350<br />
+Email:nstu.monir77@yahoo.com<br />
+&nbsp;<br />
+Central Mosque &nbsp;<br />
+Imam:Hafez Mao. Md. Giyas Uddin Bhuiyan<br />
+Mobile:01814174228<br />
+&nbsp;<br />
+Despatch Branch:<br />
+Section officer<br />
+Mr. Md. Machodur Rahman<br />
+Mobile:01819360174<br />
+Email:masud.nstu@gmail.com<br />
+&nbsp;<br />
+University Library &nbsp;<br />
 <br />
-mobile:<a href="tel:+8801733998894"> 01733998894</a><br />
-Email:<a href="mailto:tamzidnstu@gmail.com">tamzidnstu@gmail.com</a>
-<p>Guest house on Dhaka</p><br />
-mobile:<a href="tel:+8801934384890"> 01934384890</a><br />
-</div>
-<div class="headertitle">Estate and Housing Branch</div>
-<p style="text-align: center;"><strong>Assistant Register</strong></p>
-<div class="infoclass"><strong>Mr. Mohammad saifuddin
-</strong><br />
-<br />
-mobile:<a href="tel:+8801817584882"> 01817584882</a><br />
-Email:<a href="mailto:saif_nstu2013@yahoo.com">saif_nstu2013@yahoo.com</a>
-</div>
-<div class="infoclass"><strong>Mr. Mohammad Abdur Rahim Bhuiya
-</strong><br />
-<br />
-mobile:<a href="tel:+8801711284910"> 01711284910</a><br />
-Email:<a href="mailto:bhuiyannstu@yahoo.com">bhuiyannstu@yahoo.com</a>
+&nbsp;<br />
+Section officer<br />
+Mr Mohammad Abdullah Al Mamun<br />
+Mobile:01720175283<br />
+Email:nstu_library@yahoo.com</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<div class="infoclass"><br />
+Officers&#39; Association<br />
+Convener<br />
+Mr. Shakhawat Hossen<br />
+Phone: 01721267030<br />
+Email: shakhawat_84@yahoo.com</div>
+
+<div class="infoclass">Dr.Mohammad Arafat Rahman<br />
+Member Secretary<br />
+Mobile:01925476993<br />
+E-mail:rousseau777@yahoo.com</div>
+
+<div class="infoclass">&nbsp;<br />
+Law Minister&#39;s Office<br />
+Mr. Joynal Abedin Advocate<br />
+Senior lawyer<br />
+Noakhali Bar Association<br />
+Phone: 62363, 61288
+<div class="infoclass">Mr. Md. Habibur Rasul Mamun<br />
+Senior lawyer<br />
+Noakhali Bar Association<br />
+Phone: 62754<br />
+Phone: 01711239709</div>
+
+<div class="infoclass">Advocate Mr. Md. Jamal Uddin Bhuiyan<br />
+Senior lawyer<br />
+Noakhali Bar Association<br />
+Phone: 01711938987</div>
+
+<div class="infoclass">Advocate Md. Mosarrof Hossen<br />
+Senior Lawyer<br />
+Phone: 01712211724</div>
+
+<div class="infoclass">Bank<br />
+Manager, Agrani Bank, NSTU<br />
+Md Monjurul Karim<br />
+Phone: 01819345148</div>
+
+<p>Director (Finance &amp; Accounts) Office</p>
+
+<div class="infoclass">Director<br />
+Mr. Abdul Jolil<br />
+Phone: 62815<br />
+Mobile: 01720197823</div>
+
+<div class="infoclass">Assistant Director<br />
+Md. Monowar Hossain<br />
+Phone: 01838525352<br />
+Email: monowar_nstu@yahoo.com</div>
+
+<div class="infoclass">Section Officer<br />
+Mr. Shakhawat Hossen<br />
+Phone: 01721267030<br />
+Email: shakhawat_84@yahoo.com</div>
+
+<div class="infoclass">A S M Ziaul hoque<br />
+Phone: 01712980553<br />
+Email: forhad_ois@yahoo.com</div>
+
+<div class="infoclass">Humayun Kabir<br />
+Phone: 01724436792<br />
+Email: humayunkabir3814@yahoo.com</div>
+
+<div class="infoclass">Accountant S M Akbar Hossen<br />
+Phone: 01817584465</div>
+
+<div class="infoclass">Planning Development Office<br />
+Director<br />
+Eng. Jamal Hossen<br />
+Phone: 62824<br />
+Mobile: 01720197825, 01554337039<br />
+Email: jamaldpdnstu@yahoo.com</div>
+
+<div class="infoclass">Planning Officer<br />
+Nitai Chandra Roy<br />
+Phone: 01916170964<br />
+Email: planning_nstu@yahoo.com</div>
+
+<div class="infoclass">Asst. Eng<br />
+Eng. Firoz Ahmed Patowory<br />
+Phone: 01918363031<br />
+Email: eng.firozahmed@yahoo.com</div>
+
+<div class="infoclass">Section Officer<br />
+Anwar Hossain<br />
+Phone: 01715703570<br />
+Email: dalim97@yahoo.com</div>
+
+<div class="infoclass">Md. Sakhawat ullah<br />
+Phone: 01716257740</div>
+
+<div class="infoclass">Sub Assistant Eng<br />
+Md. Syedahmed (Civil)<br />
+Phone: 01716635129<br />
+Email: syedahmednstu@yahoo.com</div>
+
+<div class="infoclass">Md. Moin uddin(Civil)<br />
+Phone: 01718565013</div>
+
+<div class="infoclass">Md. Mojibur Rahman(Elec.)<br />
+Phone: 01714777766<br />
+Email: mamunengr1@yahoo.com</div>
+
+<p>Exam Controller Office</p>
+
+<div class="infoclass">Exam Controller<br />
+A. K. M. Sayedul Haque Chowdhury<br />
+Vice Chancellor<br />
+Phone: 71482<br />
+Mobile: 01730042888</div>
+
+<div class="infoclass">Asst. Exam controller<br />
+Md. Shafiqul Islam<br />
+Phone:&nbsp; 01811150935<br />
+Email: nadid.nstu@gmail.com</div>
+
+<div class="infoclass">Md. wahed ullah chowdhury<br />
+Phone: 01818024513<br />
+Email: wahed@gmail.com</div>
+
+<div class="infoclass">Assistant Programmar<br />
+Md moyeen uddin<br />
+Phone: 01740847993<br />
+Email: moyeen.cste@gmail.com</div>
+
+<div class="infoclass">Section Officer<br />
+Md. Saiful Islam<br />
+Phone: 01711908073<br />
+Email: saiful77.nstu@gmail.com</div>
+
+<div class="infoclass">Nazrul Islam<br />
+Phone: 01715278077<br />
+Email: nazrul.nstu@gmail.com</div>
+
+<div class="infoclass">Md. Yousuf<br />
+Phone: 01712210968<br />
+Email: yousuf00001@gmail.com</div>
+
+<div class="infoclass">Athletics department<br />
+Md. Sanjib Kumar dey<br />
+Phone: 01716293672<br />
+Email: sanjibdey77@yahoo.com</div>
+
+<div class="infoclass">Cyber Center<br />
+Abhijit Chakraborty<br />
+01912183607<br />
+Email: abhijit.cse@gmail.com</div>
+
+<p>Teachers Association Office</p>
+
+<div class="infoclass">President<br />
+Dr. Newaz Mohammed Bahadur<br />
+Phone: 71485<br />
+Mobile: 01733066950, 01911110671<br />
+Email: nmbahadur@yahoo.com</div>
+
+<div class="infoclass">General Secretary<br />
+Md. Towhidul Islam<br />
+Phone: 01712593494<br />
+Email: towhid.du@yahoo.com</div>
+
+<div class="infoclass">Post Office<br />
+Sub Post Master<br />
+Gowro Gossami<br />
+Phone: 01925011873</div>
 </div>
