final register office

--- a/assets/ignoreit/academic_council.html
+++ b/assets/ignoreit/academic_council.html
@@ -17,6 +17,18 @@ p{font-size:15px}
     padding-top: 2px;
 }
 .telephone:hover{color:#29b6f6}
+.email {
+    background-image: url("http://i60.tinypic.com/dqm2cy.png");
+    background-position: 3px 3px;
+    background-repeat: no-repeat;
+    background-size: 18px auto;
+    color: black;
+    padding-bottom: 3px;
+    padding-left: 22px;
+    padding-top: 2px;
+    text-decoration: none;
+}
+.email:hover{color:#29b6f6}
 </style>
 <div class="maintitle">Academic Council</div>
 
